# rules_rust

./: .bazelignore  .bazelrc  .envrc  .gitattributes  .gitignore  BUILD.bazel  COMPATIBILITY.md  MODULE.bazel  WORKSPACE.bazel  version.bzl
crate_universe/: BUILD.bazel  Cargo.toml  DEVELOPMENT.md  deps_bootstrap.bzl  docs.bzl  extension.bzl  flake.nix  repositories.bzl  version.bzl
crate_universe/private/: bootstrap_utils.bzl  common_utils.bzl  crate.bzl  crates_repository.bzl  crates_vendor.bzl  generate_utils.bzl  splicing_utils.bzl  srcs.bzl  vendor_utils.bzl
crate_universe/private/module_extensions/: cargo_bazel_bootstrap.bzl
crate_universe/src/: cli.rs  config.rs  context.rs  lib.rs  lockfile.rs  main.rs  metadata.rs  rendering.rs  select.rs  splicing.rs  test.rs  utils.rs
crate_universe/src/api/: lockfile.rs
crate_universe/src/cli/: generate.rs  query.rs  splice.rs  vendor.rs
crate_universe/src/context/: crate_context.rs  platforms.rs
crate_universe/src/metadata/: dependency.rs  metadata_annotation.rs
crate_universe/src/rendering/: template_engine.rs
crate_universe/src/rendering/templates/: module_bzl.j2
crate_universe/src/splicing/: cargo_config.rs  crate_index_lookup.rs  splicer.rs
crate_universe/src/utils/: starlark.rs  target_triple.rs
crate_universe/src/utils/starlark/: glob.rs  label.rs  select.rs  select_dict.rs  select_list.rs  select_scalar.rs  select_set.rs  serialize.rs  target_compatible_with.rs
crate_universe/test_data/metadata/aliases/: Cargo.toml  metadata.json
crate_universe/test_data/metadata/build_scripts/: metadata.json
crate_universe/test_data/metadata/common/: metadata.json
crate_universe/test_data/metadata/crate_combined_features/: metadata.json
crate_universe/test_data/metadata/crate_optional_deps_disabled/: metadata.json
crate_universe/test_data/metadata/crate_optional_deps_disabled_build_dep_enabled/: metadata.json
crate_universe/test_data/metadata/crate_types/: metadata.json
crate_universe/test_data/private/: metadata_generator.py
crate_universe/test_data/test_data_passing_crate/: Cargo.toml
crate_universe/tests/: cargo_integration_test.rs
crate_universe/tools/: BUILD.bazel  vendor.sh
crate_universe/tools/cross_installer/: cross_installer_deps.bzl
examples/: .bazelignore  .bazelrc  WORKSPACE.bazel  maven_install.json
examples/android/: .bazelrc  BUILD.bazel  WORKSPACE.bazel
examples/bindgen/: BUILD.bazel  main_leaked.rs  simple.h
examples/bindgen/simple/: BUILD.bazel  simple.h
examples/bzlmod/all_crate_deps/: BUILD.bazel  MODULE.bazel
examples/bzlmod/cross_compile/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bzlmod  hello_world_test.sh
examples/bzlmod/hello_world/: .bazelrc  BUILD.bazel  MODULE.bazel  hello_world_test.sh
examples/bzlmod/hello_world_no_cargo/: .bazelrc  BUILD.bazel  MODULE.bazel
examples/bzlmod/override_target/: Cargo.toml  MODULE.bazel
examples/crate_universe/: .bazelrc  WORKSPACE.bazel
examples/crate_universe/alias_rule/: BUILD.bazel  alias_rules.bzl  cargo-bazel-lock_global_alias_annotation_none.json  cargo-bazel-lock_global_alias_annotation_opt.json  cargo-bazel-lock_global_custom_annotation_none.json  cargo-bazel-lock_global_dbg_annotation_fastbuild.json  cargo-bazel-lock_global_opt_annotation_alias.json  cargo-bazel-lock_global_opt_annotation_dbg.json  cargo-bazel-lock_global_opt_annotation_none.json
examples/crate_universe/cargo_aliases/: .bazelrc  cargo-bazel-lock.json
examples/crate_universe/cargo_bindeps/: BUILD.bazel  Cargo.toml
examples/crate_universe/cargo_conditional_deps/: cargo-bazel-lock.json
examples/crate_universe/cargo_workspace/: .bazelrc  cargo-bazel-lock.json
examples/crate_universe/complicated_dependencies/: BUILD.bazel  boringssl-filegroup.patch  boringssl-system-includes.patch  cargo-bazel-lock.json
examples/crate_universe/multi_package/: cargo-bazel-lock.json
examples/crate_universe/no_cargo_manifests/: BUILD.bazel  cargo-bazel-lock.json
examples/crate_universe/override_target/: BUILD.bazel  cargo-bazel-lock.json
examples/crate_universe/using_cxx/: cargo-bazel-lock.json
examples/crate_universe/vendor_local_pkgs/: BUILD.bazel
examples/crate_universe/vendor_remote_pkgs/: BUILD.bazel
examples/crate_universe_unnamed/: .bazelrc
examples/crate_universe_unnamed/vendor_remote_pkgs/: BUILD.bazel
examples/hello_runfiles/: hello_runfiles.rs
examples/ios/: .bazelrc  BUILD.bazel  WORKSPACE.bazel
examples/musl_cross_compiling/: BUILD.bazel  WORKSPACE.bazel  hello_linux_musl_test.sh
examples/nix_cross_compiling/: .bazelrc  BUILD.bazel  README.md  WORKSPACE.bazel
examples/nix_cross_compiling/bazel/: nix_repositories.bzl  transitions.bzl
examples/nix_cross_compiling/cc_binary/: BUILD.bazel
examples/nix_cross_compiling/cc_library/: BUILD.bazel
examples/nix_cross_compiling/nix/: README.md  flake.nix
examples/nix_cross_compiling/rust_binary/: BUILD.bazel
examples/proto/helloworld/: helloworld_test.rs
examples/sys/: sys_deps.bzl
examples/wasm_bindgen/: BUILD.bazel  hello_world_wasm_test.js
examples/wasm_bindgen/rules_js/: BUILD.bazel
examples/wasm_bindgen/rules_nodejs/: BUILD.bazel
examples/zig_cross_compiling/: .bazelrc
proto/prost/: BUILD.bazel  repositories.bzl
proto/prost/private/: BUILD.bazel  prost.bzl  protoc_wrapper.rs  repositories.bzl
rust/private/: BUILD.bazel  clippy.bzl  common.bzl  extensions.bzl  providers.bzl  repository_utils.bzl  rust.bzl  rust_analyzer.bzl  rustc.bzl  rustdoc.bzl  rustdoc_test.bzl  rustfmt.bzl  toolchain_utils.bzl  unpretty.bzl  utils.bzl
test/bzl_version/: BUILD.bazel  bzl_version_test.rs
test/cc_shared_library/: BUILD.bazel
tools/rustfmt/: BUILD.bazel
tools/rustfmt/src/: lib.rs  upstream_rustfmt_wrapper.rs
util/process_wrapper/: BUILD.bazel  main.rs  options.rs  output.rs  rustc.rs
wasm_bindgen/: BUILD.bazel  defs.bzl  providers.bzl  repositories.bzl
wasm_bindgen/private/: BUILD.bazel  wasm_bindgen.bzl
wasm_bindgen/rules_js/: BUILD.bazel  defs.bzl  repositories.bzl
wasm_bindgen/rules_nodejs/: defs.bzl  repositories.bzl
(+1249 files in other folders)
