load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("//wasm_bindgen:defs.bzl", "rust_wasm_bindgen_toolchain")

package(default_visibility = ["//visibility:public"])

toolchain_type(
    name = "toolchain_type",
)

bzl_library(
    name = "bzl_lib",
    srcs = glob(["**/*.bzl"]),
    deps = [
        "//rust:bzl_lib",
        "//wasm_bindgen/3rdparty:bzl_lib",
        "//wasm_bindgen/private:bzl_lib",
    ],
)

rust_wasm_bindgen_toolchain(
    name = "default_wasm_bindgen_toolchain_impl",
    bindgen = "@rules_rust//wasm_bindgen/3rdparty:wasm_bindgen_cli",
)

toolchain(
    name = "default_wasm_bindgen_toolchain",
    toolchain = "default_wasm_bindgen_toolchain_impl",
    toolchain_type = "//wasm_bindgen:toolchain_type",
)
