load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("//bazel:transitions.bzl", "platform_transition_binary")

# Disabled targets need the user to supply a sysroot in `flake.nix` first.

build_test(
    name = "nix_cross_compiling",
    targets = [
        # ":cc_binary_aarch64-apple-darwin",
        # ":cc_binary_aarch64-apple-ios",
        ":cc_binary_aarch64-linux-android",
        ":cc_binary_aarch64-unknown-linux-gnu",
        ":cc_binary_wasm32-unknown-unknown",
        ":cc_binary_wasm32-wasi",
        # ":cc_binary_x86_64-apple-darwin",
        # ":cc_binary_x86_64-pc-windows-msvc",
        ":cc_binary_x86_64-unknown-linux-gnu",
        ":cc_binary_x86_64-unknown-nixos-gnu",
        # ":rust_binary_aarch64-apple-darwin",
        # ":rust_binary_aarch64-apple-ios",
        ":rust_binary_aarch64-linux-android",
        ":rust_binary_aarch64-unknown-linux-gnu",
        ":rust_binary_wasm32-unknown-unknown",
        ":rust_binary_wasm32-wasi",
        # ":rust_binary_x86_64-apple-darwin",
        # ":rust_binary_x86_64-pc-windows-msvc",
        ":rust_binary_x86_64-unknown-linux-gnu",
        ":rust_binary_x86_64-unknown-nixos-gnu",
    ],
)

# platform_transition_binary(
#     name = "cc_binary_aarch64-apple-darwin",
#     binary = "//cc_binary",
#     target_platform = "//bazel/platforms:aarch64-apple-darwin",
# )

# platform_transition_binary(
#     name = "cc_binary_aarch64-apple-ios",
#     binary = "//cc_binary",
#     target_platform = "//bazel/platforms:aarch64-apple-ios",
# )

platform_transition_binary(
    name = "cc_binary_aarch64-linux-android",
    binary = "//cc_binary",
    target_platform = "//bazel/platforms:aarch64-linux-android",
)

platform_transition_binary(
    name = "cc_binary_aarch64-unknown-linux-gnu",
    binary = "//cc_binary",
    target_platform = "//bazel/platforms:aarch64-unknown-linux-gnu",
)

platform_transition_binary(
    name = "cc_binary_wasm32-unknown-unknown",
    binary = "//cc_binary",
    target_platform = "//bazel/platforms:wasm32-unknown-unknown",
)

platform_transition_binary(
    name = "cc_binary_wasm32-wasi",
    binary = "//cc_binary",
    target_platform = "//bazel/platforms:wasm32-wasi",
)

# platform_transition_binary(
#     name = "cc_binary_x86_64-apple-darwin",
#     binary = "//cc_binary",
#     target_platform = "//bazel/platforms:x86_64-apple-darwin",
# )

# platform_transition_binary(
#     name = "cc_binary_x86_64-pc-windows-msvc",
#     binary = "//cc_binary",
#     target_platform = "//bazel/platforms:x86_64-pc-windows-msvc",
# )

platform_transition_binary(
    name = "cc_binary_x86_64-unknown-linux-gnu",
    binary = "//cc_binary",
    target_platform = "//bazel/platforms:x86_64-unknown-linux-gnu",
)

platform_transition_binary(
    name = "cc_binary_x86_64-unknown-nixos-gnu",
    binary = "//cc_binary",
    target_platform = "//bazel/platforms:x86_64-unknown-nixos-gnu",
)

# platform_transition_binary(
#     name = "rust_binary_aarch64-apple-darwin",
#     binary = "//rust_binary",
#     target_platform = "//bazel/platforms:aarch64-apple-darwin",
# )

# platform_transition_binary(
#     name = "rust_binary_aarch64-apple-ios",
#     binary = "//rust_binary",
#     target_platform = "//bazel/platforms:aarch64-apple-ios",
# )

platform_transition_binary(
    name = "rust_binary_aarch64-linux-android",
    binary = "//rust_binary",
    target_platform = "//bazel/platforms:aarch64-linux-android",
)

platform_transition_binary(
    name = "rust_binary_aarch64-unknown-linux-gnu",
    binary = "//rust_binary",
    target_platform = "//bazel/platforms:aarch64-unknown-linux-gnu",
)

platform_transition_binary(
    name = "rust_binary_wasm32-unknown-unknown",
    binary = "//rust_binary",
    target_platform = "//bazel/platforms:wasm32-unknown-unknown",
)

platform_transition_binary(
    name = "rust_binary_wasm32-wasi",
    binary = "//rust_binary",
    target_platform = "//bazel/platforms:wasm32-wasi",
)

# platform_transition_binary(
#     name = "rust_binary_x86_64-apple-darwin",
#     binary = "//rust_binary",
#     target_platform = "//bazel/platforms:x86_64-apple-darwin",
# )

# platform_transition_binary(
#     name = "rust_binary_x86_64-pc-windows-msvc",
#     binary = "//rust_binary",
#     target_platform = "//bazel/platforms:x86_64-pc-windows-msvc",
# )

platform_transition_binary(
    name = "rust_binary_x86_64-unknown-linux-gnu",
    binary = "//rust_binary",
    target_platform = "//bazel/platforms:x86_64-unknown-linux-gnu",
)

platform_transition_binary(
    name = "rust_binary_x86_64-unknown-nixos-gnu",
    binary = "//rust_binary",
    target_platform = "//bazel/platforms:x86_64-unknown-nixos-gnu",
)
