load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

toolchain_type(
    name = "toolchain_type",
)

toolchain(
    name = "default_prost_toolchain",
    toolchain = "//proto/prost/private:default_prost_toolchain_impl",
    toolchain_type = ":toolchain_type",
)

bzl_library(
    name = "bzl_lib",
    srcs = glob(["**/*.bzl"]),
    deps = [
        "//proto/prost/private:bzl_lib",
        "//rust:bzl_lib",
    ],
)
