load("//:version.bzl", "VERSION")
load("//rust:defs.bzl", "rust_test")

rust_test(
    name = "bzl_version_test",
    srcs = ["bzl_version_test.rs"],
    data = [
        "//:MODULE.bazel",
    ],
    edition = "2021",
    env = {
        "MODULE_BAZEL": "$(rlocationpath //:MODULE.bazel)",
        "VERSION": VERSION,
    },
    deps = [
        "//tools/runfiles",
    ],
)
